--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "> Project description",
   "main": ".eslintrc.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "server": "nodemon ./server/index.js",
     "react-dev": "webpack -d --watch",
     "seed_db": "node ./database/seedUsers.js | node ./database/seedReviews.js"
