--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": ".eslintrc.js",
   "scripts": {
     "test": "jest",
-    "server": "nodemon ./server/index.js",
-    "react-dev": "webpack -d --watch",
+    "start": "nodemon ./server/index.js",
+    "react-dev": "webpack -d --watch --display-error-details",
     "seed_db": "node ./database/seedUsers.js | node ./database/seedReviews.js"
   },
   "jest": {
@@ -61,24 +61,24 @@
     "enzyme": "^3.7.0",
     "enzyme-adapter-react-16": "^1.6.0",
     "enzyme-to-json": "^3.3.4",
-    "eslint": "^5.7.0",
+    "eslint": "^5.8.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^23.6.0",
-    "nodemon": "^1.18.4",
-    "react": "^16.6.0",
-    "react-dom": "^16.6.0",
+    "nodemon": "^1.18.6",
     "react-test-renderer": "^16.6.0",
     "style-loader": "^0.23.1",
-    "webpack": "^4.23.1",
+    "webpack": "^4.25.1",
     "webpack-cli": "^3.1.2"
   },
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "faker": "^4.1.0",
-    "moment": "^2.22.2",
-    "mysql": "^2.16.0"
+    "moment": "^2.22.1",
+    "mysql": "^2.16.0",
+    "react": "^16.6.0",
+    "react-dom": "^16.6.0"
   }
 }
