--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "faker": "^4.1.0",
     "moment": "^2.22.1",
     "mysql": "^2.16.0",
+    "prop-types": "^15.6.2",
     "react": "^16.6.0",
     "react-dom": "^16.6.0"
   }
