--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": ".eslintrc.js",
   "scripts": {
     "test": "jest",
-    "start": "nodemon ./server/index.js",
+    "start": "node ./server/index.js",
     "react-dev": "webpack -d --watch --display-error-details",
     "seed_db": "node ./database/seedUsers.js | node ./database/seedReviews.js"
   },
